science text, bib

--- a/extracted.bib
+++ b/extracted.bib
@@ -168,6 +168,56 @@
   doi =           {10.1088/0004-637X/691/2/1254},
 }
 
+@article{Matthews2010a,
+  author =        {{Matthews}, L.~D. and {Greenhill}, L.~J. and
+                   {Goddi}, C. and {Chandler}, C.~J. and
+                   {Humphreys}, E.~M.~L. and {Kunz}, M.~W.},
+  journal =       {\apj},
+  month =         jan,
+  pages =         {80-92},
+  title =         {{A Feature Movie of SiO Emission 20-100 AU from the
+                   Massive Young Stellar Object Orion Source I}},
+  volume =        {708},
+  year =          {2010},
+  abstract =      {We present multi-epoch Very Long Baseline Array
+                   imaging of the 28SiO v = 1 and v = 2, J = 1-0 maser
+                   emission toward the massive young stellar object
+                   (YSO) Orion Source I. Both SiO transitions were
+                   observed simultaneously with an angular resolution of
+                   ~0.5 mas (~0.2 AU for d = 414 pc) and a spectral
+                   resolution of ~0.2 km s-1. Here we explore the global
+                   properties and kinematics of the emission through two
+                   19-epoch animated movies spanning 21 months (from
+                   2001 March 19 to 2002 December 10). These movies
+                   provide the most detailed view to date of the
+                   dynamics and temporal evolution of molecular material
+                   within ~20-100 AU of a massive (gsim8 M sun) YSO. As
+                   in previous studies, we find that the bulk of the SiO
+                   masers surrounding Source I lie in an X-shaped locus;
+                   the emission in the south and east arms is
+                   predominantly blueshifted, and emission in the north
+                   and west is predominantly redshifted. In addition,
+                   bridges of intermediate-velocity emission are
+                   observed connecting the red and blue sides of the
+                   emission distribution. We have measured proper
+                   motions of over 1000 individual maser features and
+                   found that these motions are characterized by a
+                   combination of radially outward migrations along the
+                   four main maser-emitting arms and motions tangent to
+                   the intermediate-velocity bridges. We interpret the
+                   SiO masers as arising from a wide-angle bipolar wind
+                   emanating from a rotating, edge-on disk. The
+                   detection of maser features along extended, curved
+                   filaments suggests that magnetic fields may play a
+                   role in launching and/or shaping the wind. Our
+                   observations appear to support a picture in which
+                   stars with masses as high as at least 8 M sun form
+                   via disk-mediated accretion. However, we cannot yet
+                   rule out that the Source I disk may have been formed
+                   or altered following a recent close encounter.},
+  doi =           {10.1088/0004-637X/708/1/80},
+}
+
 @article{Goddi2010a,
   author =        {{Goddi}, C. and {Greenhill}, L. and {Humphreys}, E. and
                    {Matthews}, L. and {Chandler}, C.},
@@ -216,6 +266,36 @@
   doi =           {10.1017/S174392131001135X},
 }
 
+@inproceedings{Goddi2013a,
+  author =        {{Goddi}, C. and {Greenhill}, L. and {Matthews}, L. and
+                   {Humphreys}, E. and {Niederhofer}, F. and
+                   {Vaidya}, B. and {Moeckel}, N. and {Chandler}, C.},
+  booktitle =     {Protostars and Planets VI Posters},
+  month =         jul,
+  title =         {{Orion BN/KL: A laboratory for high-mass star
+                   formation}},
+  year =          {2013},
+  abstract =      {The details of how massive stars form are poorly
+                   known. Orion BN/KL is the closest known region with
+                   ongoing massive star formation, and hence offers
+                   unique chances for a detailed study and an excellent
+                   laboratory to test competing theories. In this
+                   poster, I illustrates highlights from a long-term
+                   study of the region based on a wealth of
+                   interferometric data from (E)VLA, VLBA, and ALMA, in
+                   particular: 1) a beautiful example of disk-mediated
+                   accretion and (magnetic) outflow recollimation in a
+                   high-mass protostar; 2) a dynamical model to explain
+                   the famous explosive BN/KL flow; 3) a new hypothesis
+                   for the excitation of the eponymous Orion Hot Core;
+                   4) the effects of the complex (clustered) environment
+                   on an actively accreting massive protostar (and
+                   viceversa). This detailed study has enabled us not
+                   only to achieve a better understanding of Orion BN/KL
+                   but also to significantly advance our understanding
+                   of high-mass star formation.},
+}
+
 @article{Greenhill2013a,
   author =        {{Greenhill}, L.~J. and {Goddi}, C. and
                    {Chandler}, C.~J. and {Matthews}, L.~D. and
@@ -250,6 +330,159 @@
                    point to a shocked super-Alfv{\'e}nic outflow.},
   doi =           {10.1088/2041-8205/770/2/L32},
   eid =           {L32},
+}
+
+@article{Cesaroni2017a,
+  author =        {{Cesaroni}, R. and {S{\'a}nchez-Monge}, {\'A}. and
+                   {Beltr{\'a}n}, M.~T. and {Johnston}, K.~G. and
+                   {Maud}, L.~T. and {Moscadelli}, L. and
+                   {Mottram}, J.~C. and {Ahmadi}, A. and {Allen}, V. and
+                   {Beuther}, H. and {Csengeri}, T. and {Etoka}, S. and
+                   {Fuller}, G.~A. and {Galli}, D. and
+                   {Galv{\'a}n-Madrid}, R. and {Goddi}, C. and
+                   {Henning}, T. and {Hoare}, M.~G. and
+                   {Klaassen}, P.~D. and {Kuiper}, R. and
+                   {Kumar}, M.~S.~N. and {Lumsden}, S. and {Peters}, T. and
+                   {Rivilla}, V.~M. and {Schilke}, P. and {Testi}, L. and
+                   {van der Tak}, F. and {Vig}, S. and {Walmsley}, C.~M. and
+                   {Zinnecker}, H.},
+  journal =       {\aap},
+  month =         jun,
+  pages =         {A59},
+  title =         {{Chasing discs around O-type (proto)stars: Evidence
+                   from ALMA observations}},
+  volume =        {602},
+  year =          {2017},
+  abstract =      {Context. Circumstellar discs around massive stars
+                   could mediate the accretion onto the star from the
+                   infalling envelope, and could minimize the effects of
+                   radiation pressure. Despite such a crucial role, only
+                   a few convincing candidates have been provided for
+                   discs around deeply embedded O-type (proto)stars.
+                   Aims: In order to establish whether disc-mediated
+                   accretion is the formation mechanism for the most
+                   massive stars, we have searched for circumstellar,
+                   rotating discs around a limited sample of six
+                   luminous (>105L&sun;) young stellar objects. These
+                   objects were selected on the basis of their IR and
+                   radio properties in order to maximize the likelihood
+                   of association with disc+jet systems. Methods: We
+                   used ALMA with 0.̋2 resolution to observe a large
+                   number of molecular lines typical of hot molecular
+                   cores. In this paper we limit our analysis to two
+                   disc tracers (methyl cyanide, CH3CN, and its
+                   isotopologue, 13CH3CN), and an outflow tracer
+                   (silicon monoxide, SiO). Results: We reveal many
+                   cores, although their number depends dramatically on
+                   the target. We focus on the cores that present
+                   prominent molecular line emission. In six of these a
+                   velocity gradient is seen across the core,three of
+                   which show evidence of Keplerian-like rotation. The
+                   SiO data reveal clear but poorly collimated bipolar
+                   outflow signatures towards two objects only. This can
+                   be explained if real jets are rare (perhaps
+                   short-lived) in very massive objects and/or if
+                   stellar multiplicity significantly affects the
+                   outflow structure.For all cores with velocity
+                   gradients, the velocity field is analysed through
+                   position-velocity plots to establish whether the gas
+                   is undergoing rotation with nurot ∝ R- alpha, as
+                   expected for Keplerian-like discs. Conclusions: Our
+                   results suggest that in three objects we are
+                   observing rotation in circumstellar discs, with three
+                   more tentative cases, and one core where no evidence
+                   for rotation is found. In all cases but one, we find
+                   that the gas mass is less than the mass of any
+                   embedded O-type star, consistent with the (putative)
+                   discs undergoing Keplerian-like rotation. With the
+                   caveat of low number statistics, we conclude that the
+                   disc detection rate could be sensitive to the
+                   evolutionary stage of the young stellar object. In
+                   young, deeply embedded sources, the evidence for
+                   discs could be weak because of confusion with the
+                   surrounding envelope, while in the most evolved
+                   sources the molecular component of the disc could
+                   have already been dispersed. Only in those objects
+                   that are at an intermediate stage of the evolution
+                   would the molecular disc be sufficiently prominent
+                   and relatively less embedded to be detectable by
+                   mm/submm observations.},
+  doi =           {10.1051/0004-6361/201630184},
+  eid =           {A59},
+}
+
+@article{Goddi2018a,
+  author =        {{Goddi}, C. and {Ginsburg}, A. and {Maud}, L. and
+                   {Zhang}, Q. and {Zapata}, L.},
+  journal =       {ArXiv e-prints},
+  month =         may,
+  title =         {{Accretion and outflow structures within 1000 AU from
+                   high-mass protostars with ALMA longest baselines}},
+  year =          {2018},
+  abstract =      {Understanding the formation of massive stars is one
+                   of the unsolved problems in modern astronomy. The
+                   main difficulty is that the intense radiation from
+                   the high-luminosity stars and the thermal pressure
+                   from the resulting ionized gas (both insignificant
+                   for low-mass stars) may be able to reverse the
+                   accretion flow and prevent the star from accreting
+                   fresh material. Such feedback effects can naturally
+                   be mitigated if accretion proceeds through discs,
+                   which is the established mechanism to form sun-like
+                   stars. However, recent 3D MHD simulations have shown
+                   that accretion on 1000 au scales is through filaments
+                   rather than a large disc. This theoretical prediction
+                   has never been confirmed via observations owing to
+                   the poor linear resolution of previous studies (>1000
+                   au). Here we present the first observational evidence
+                   that mass assembly in young high-mass stars forming
+                   in protoclusters is predominantly asymmetric and
+                   disordered. In particular, we observed the innermost
+                   regions around three deeply embedded high-mass
+                   protostars with very high spatial resolution (~100
+                   au). We identified multiple massive (several solar
+                   masses), warm (50-150 Kelvin) filamentary streamers
+                   pointing onto the central sources, which we interpret
+                   as multi-directional accretion channels. These
+                   structures inhibit the formation of a large, steady
+                   disc. Nevertheless, the identification of fast
+                   collimated outflows in the three observed systems
+                   indicates that (non-steady) compact discs may be
+                   present (we measure upper limits on their radii of
+                   <80 for one object and <350 astronomical units for
+                   the remaining two objects). Our finding contrasts
+                   with the simplified classic paradigm of an ordered
+                   (and stable) disc/jet system and provides an
+                   experimental confirmation of a multi-directional and
+                   unsteady accretion model for massive star formation
+                   supported by recent 3D (magneto)hydrodynamic
+                   simulations.},
+}
+
+@article{McGuire2018c,
+  author =        {{McGuire}, B.~A.},
+  journal =       {ArXiv e-prints},
+  month =         sep,
+  title =         {{2018 Census of Interstellar, Circumstellar,
+                   Extragalactic, Protoplanetary Disk, and Exoplanetary
+                   Molecules}},
+  year =          {2018},
+  abstract =      {To date, 204 individual molecular species, comprised
+                   of 16 different elements, have been detected in the
+                   interstellar and circumstellar medium by astronomical
+                   observations. These molecules range in size from two
+                   atoms to seventy, and have been detected across the
+                   electromagnetic spectrum from cm-wavelengths to the
+                   ultraviolet. This census presents a summary of the
+                   first detection of each molecular species, including
+                   the observational facility, wavelength range,
+                   transitions, and enabling laboratory spectroscopic
+                   work, as well as listing tentative and disputed
+                   detections. Tables of molecules detected in
+                   interstellar ices, external galaxies, protoplanetary
+                   disks, and exoplanetary atmospheres are provided. A
+                   number of visual representations of this aggregate
+                   data are presented and briefly discussed in context.},
 }
 
 @article{Cernicharo1987a,
@@ -420,6 +653,34 @@
                    structure. (abridged)},
 }
 
+@article{Herwig2005a,
+  author =        {{Herwig}, F.},
+  journal =       {\araa},
+  month =         sep,
+  pages =         {435-479},
+  title =         {{Evolution of Asymptotic Giant Branch Stars}},
+  volume =        {43},
+  year =          {2005},
+  abstract =      {The current status of modeling the evolution and
+                   nucleosynthesis of asymptotic giant branch (AGB)
+                   stars is reviewed. The principles of AGB evolution
+                   have been investigated in recent years leading to
+                   improved and refined models, for example with regard
+                   to hot-bottom burning or the third dredge-up. The
+                   postprocessing s-process model yields quantitative
+                   results that reproduce many observations. However,
+                   these and most other processes in AGB stars are
+                   intimately related to the physics of stellar mixing.
+                   Mixing in AGB stars is currently not well-enough
+                   understood for accurate yield predictions. Several
+                   constraints and methods are available to improve the
+                   models. Some regimes of AGB evolution have not yet
+                   been studied in sufficient detail. These include the
+                   super-AGB stars and AGB stars at extremely low or
+                   ultra low metallicity.},
+  doi =           {10.1146/annurev.astro.43.072103.150600},
+}
+
 @article{Schilke1997a,
   author =        {{Schilke}, P. and {Walmsley}, C.~M. and
                    {Pineau des Forets}, G. and {Flower}, D.~R.},
@@ -546,12 +807,16 @@
                    page http://www.ph1.uni-koeln.de/.},
 }
 
-@{Lovas2005a,
-  author =        {{Lovas}, F.~J. and {Tiemann}, E.},
-  month =         {nov},
-  title =         {NIST Standard Reference Database 114},
+@book{Lovas2005b,
+  address =       {https://dx.doi.org/10.18434/T4T59X},
+  author =        {{Lovas}, F.~J. and {Tiemann}, E. and {Coursey}, J. S. and
+                   {Kotochigova}, S. A. and {Chang}, J. and {Olsen}, K. and
+                   {Dragoset}, R. A.},
+  number =        {114},
+  publisher =     {NIST Physical Measurement Laboratory},
+  title =         {NIST Chemistry WebBook, NIST Standard Reference
+                   Database Number 114},
   year =          {2005},
-  url =           {https://www.nist.gov/pml/diatomic-spectral-database},
 }
 
 @article{Pickett1998a,
@@ -760,6 +1025,50 @@
                    available in electronic form at http://www.aanda.org},
   doi =           {10.1051/0004-6361/201218963},
   eid =           {A48},
+}
+
+@article{Zack2011a,
+  author =        {{Zack}, L.~N. and {Halfen}, D.~T. and
+                   {Ziurys}, L.~M.},
+  journal =       {\apjl},
+  month =         jun,
+  pages =         {L36},
+  title =         {{Detection of FeCN (x $^{4}${$\Delta$} $_{i}$ ) in
+                   IRC+10216: A New Interstellar Molecule}},
+  volume =        {733},
+  year =          {2011},
+  abstract =      {A new interstellar molecule, FeCN (X 4Delta i ), has
+                   been detected in the envelope of the carbon-rich
+                   asymptotic giant branch star, IRC+10216. This work is
+                   the first definitive detection of an iron-bearing
+                   molecule in the interstellar medium and is based on
+                   newly measured rest frequencies. Eight successive
+                   rotational transitions of this linear free radical in
+                   the lowest spin ladder, Omega = 7/2, were observed at
+                   2 and 3 mm using the Arizona Radio Observatory (ARO)
+                   12 m telescope. Three transitions appear as single,
+                   unblended features at the 1-2 mK level and exhibit
+                   characteristic IRC+10216 line profiles; one had
+                   previously been observed with the IRAM 30 m
+                   telescope. Two other transitions are partially
+                   blended, but exhibit distinct emission at the FeCN
+                   frequencies. The remaining transitions are either
+                   completely contaminated, or are too high in energy.
+                   Comparison of the ARO and IRAM data suggests a source
+                   size for FeCN of ~30'' in IRC+10216, indicating an
+                   outer shell distribution, as expected for a free
+                   radical. The column density derived for FeCN is N tot
+                   = 8.6 × 1011 cm-2 with a rotational temperature of T
+                   rot = 21 K. The fractional abundance of this molecule
+                   is [FeCN]/[H2] ~ 2-7 × 10-10---comparable to that of
+                   MgCN and KCN in IRC+10216. FeCN is likely formed by
+                   gas-phase reactions of Fe+ or neutral iron; the
+                   latter has a significant gas-phase abundance in the
+                   outer shell. The detection of FeCN is further
+                   evidence that metal cyanides/isocyanides dominate the
+                   chemistry of refractory elements in IRC+10216.},
+  doi =           {10.1088/2041-8205/733/2/L36},
+  eid =           {L36},
 }
 
 @article{Kaminski2013a,
@@ -1469,44 +1778,129 @@
   doi =           {10.1063/1.450060},
 }
 
+@article{Nummelin1998a,
+  author =        {{Nummelin}, A. and {Bergman}, P. and
+                   {Hjalmarson}, {\AA}. and {Friberg}, P. and
+                   {Irvine}, W.~M. and {Millar}, T.~J. and {Ohishi}, M. and
+                   {Saito}, S.},
+  journal =       {\apjs},
+  month =         jul,
+  pages =         {427-529},
+  title =         {{A Three-Position Spectral Line Survey of Sagittarius
+                   B2 between 218 and 263 GHz. I. The Observational
+                   Data}},
+  volume =        {117},
+  year =          {1998},
+  abstract =      {We have surveyed the frequency band 218.30-263.55 GHz
+                   toward the core positions N and M and the quiescent
+                   cloud position NW in the Sgr B2 molecular cloud using
+                   the Swedish-ESO Submillimetre Telescope. In total
+                   1730, 660, and 110 lines were detected in N, M, and
+                   NW, respectively, and 42 different molecular species
+                   were identified. The number of unidentified lines are
+                   337, 51, and eight. Toward the N source, spectral
+                   line emission constitutes 22% of the total detected
+                   flux in the observed band, and complex organic
+                   molecules are the main contributors. Toward M, 14% of
+                   the broadband flux is caused by lines, and SO2 is
+                   here the dominant source of emission. NW is
+                   relatively poor in spectral lines and continuum. In
+                   this paper we present the spectra together with
+                   tables of suggested line identifications.},
+  doi =           {10.1086/313126},
+}
+
+@article{Belloche2013a,
+  author =        {{Belloche}, A. and {M{\"u}ller}, H.~S.~P. and
+                   {Menten}, K.~M. and {Schilke}, P. and {Comito}, C.},
+  journal =       {ArXiv e-prints},
+  month =         aug,
+  title =         {{Complex organic molecules in the interstellar
+                   medium: IRAM 30 m line survey of Sagittarius B2(N)
+                   and (M)}},
+  year =          {2013},
+  abstract =      {The discovery of amino acids in meteorites and the
+                   detection of glycine in samples returned from a comet
+                   to Earth suggest that the interstellar chemistry is
+                   capable of producing such complex organic molecules.
+                   Our goal is to investigate the degree of chemical
+                   complexity that can be reached in the ISM. We
+                   performed an unbiased, spectral line survey toward
+                   Sgr B2(N) and (M) with the IRAM 30m telescope in the
+                   3mm window. The spectra were analyzed with a simple
+                   radiative transfer model that assumes LTE but takes
+                   optical depth effects into account. About 3675 and
+                   945 spectral lines with a peak signal-to-noise ratio
+                   higher than 4 are detected toward N and M, i.e. about
+                   102 and 26 lines per GHz, respectively. This
+                   represents an increase by about a factor of 2 over
+                   previous surveys of Sgr B2. About 70% and 47% of the
+                   lines detected toward N and M are identified and
+                   assigned to 56 and 46 distinct molecules as well as
+                   to 66 and 54 less abundant isotopologues of these
+                   molecules, respectively. We also report the detection
+                   of transitions from 59 and 24 catalog entries
+                   corresponding to vibrationally or torsionally excited
+                   states of some of these molecules, respectively.
+                   Excitation temperatures and column densities were
+                   derived for each species but should be used with
+                   caution. Among the detected molecules,
+                   aminoacetonitrile, n-propyl cyanide, and ethyl
+                   formate were reported for the first time in space
+                   based on this survey, as were 5 rare isotopologues of
+                   vinyl cyanide, cyanoacetylene, and hydrogen cyanide.
+                   We also report the detection of transitions from
+                   within 12 new vib. or tors. excited states of known
+                   molecules. Although the large number of unidentified
+                   lines may still allow future identification of new
+                   molecules, we expect most of these lines to belong to
+                   vib. or tors. excited states or to rare isotopologues
+                   of known molecules for which spectroscopic
+                   predictions are currently missing. (abridged)},
+}
+
 @article{Girart2017a,
   author =        {{Girart}, J.~M. and {Estalella}, R. and
                    {Fern{\'a}ndez-L{\'o}pez}, M. and {Curiel}, S. and
-                   {Frau}, P and {Galvan-Madrid}, R. and {Rao}, R. and
+                   {Frau}, P. and {Galvan-Madrid}, R. and {Rao}, R. and
                    {Busquet}, G. and {Ju{\'a}rez}, C.},
-  journal =       {ArXiv e-prints},
-  month =         jul,
-  title =         {{The circumestellar disk of the B0 protostar powering
-                   the HH 80-81 radio jet}},
+  journal =       {\apj},
+  month =         sep,
+  pages =         {58},
+  title =         {{The Circumestellar Disk of the B0 Protostar Powering
+                   the HH 80-81 Radio Jet}},
+  volume =        {847},
   year =          {2017},
   abstract =      {We present subarcsecond angular resolution
                    observations carried out with the Submillimeter Array
-                   (SMA) at 880 $\mu$m centered at the B0-type protostar
-                   GGD27~MM1, the driving source of the parsec scale HH
+                   (SMA) at 880 mum centered at the B0-type protostar
+                   GGD27 MM1, the driving source of the parsec scale HH
                    80-81 jet. We constrain its polarized continuum
-                   emission to be $\lesssim0.8\%$ at this wavelength.
-                   Its submm spectrum is dominated by sulfur-bearing
-                   species tracing a rotating disk--like structure (SO
-                   and SO$_2$ isotopologues mainly), but also shows
-                   HCN-bearing and CH$_3$OH lines, which trace the disk
-                   and the outflow cavity walls excavated by the HH
-                   80-81 jet. The presence of many sulfurated lines
-                   could indicate the presence of shocked gas at the
-                   disk's centrifugal barrier or that MM1 is a hot core
-                   at an evolved stage. The resolved SO$_2$ emission
-                   traces very well the disk kinematics and we fit the
-                   SMA observations using a thin-disk Keplerian model,
-                   which gives the inclination (47$^{\circ}$), the inner
-                   ($\lesssim170$ AU) and outer ($\sim950-1300$~AU)
-                   radii and the disk's rotation velocity (3.4 km
-                   s$^{-1}$ at a putative radius of 1700 AU). We roughly
-                   estimate a protostellar dynamical mass of 4-18\msun.
-                   MM2 and WMC cores show, comparatively, an almost
-                   empty spectra suggesting that they are associated
-                   with extended emission detected in previous
-                   low-angular resolution observations, and therefore
-                   indicating youth (MM2) or the presence of a less
-                   massive object (WMC).},
+                   emission to ≲0.8% at this wavelength. Its
+                   submillimeter spectrum is dominated by sulfur-bearing
+                   species tracing a rotating-disk-like structure (SO
+                   and SO2 isotopologues mainly), but also shows
+                   HCN-bearing and CH3OH lines, which trace the disk and
+                   the outflow cavity walls excavated by the HH 80-81
+                   jet. The presence of many sulfurated lines could
+                   indicate the presence of shocked gas at the disk's
+                   centrifugal barrier or that MM1 is a hot core at an
+                   evolved stage. The resolved SO2 emission traces the
+                   disk kinematics very well and we fit the SMA
+                   observations using a thin-disk Keplerian model, which
+                   gives the inclination (47$\,^{\circ}$), the inner
+                   (≲170 au) and outer (˜950-1300 au) radii, and the
+                   disk's rotation velocity (3.4 km s-1 at a putative
+                   radius of 1700 au). We roughly estimate a
+                   protostellar dynamical mass of 4-18 {M}&sun; . MM2
+                   and WMC cores show, comparatively, an almost empty
+                   spectra, suggesting that they are associated with
+                   extended emission detected in previous low-angular
+                   resolution observations, and therefore indicating
+                   youth (MM2) or the presence of a less massive object
+                   (WMC).},
+  doi =           {10.3847/1538-4357/aa81c9},
+  eid =           {58},
 }
 
 @article{Fortman2012a,
