--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -33,7 +33,7 @@ The disk around Orion Source I (\sourcei) has been the subject of intense
 study, as it is the closest disk around a `high-mass' ($M>8$ \msun) star
 \citep{Hirota2014a,Plambeck2016a,Ginsburg2018b}.  It is also in many ways
 a unique source, being the only known protostellar object with SiO and \water
-masers in an outflow \citep{Goddi2009a,Goddi2010a,Greenhill2013a}.
+masers in an outflow \citep{Goddi2009a,Matthews2010a,Goddi2010a,Goddi2013a,Greenhill2013a}.
 In \citet{Ginsburg2018b}, a subset of the authors reported 0.03$\arcsec$ ALMA
 observations of \sourcei that allowed us to measure the outer rotation curve of
 the 5(5,0)-6(4,3) \water line in the disk and along the base of the outflow;
@@ -56,13 +56,19 @@ KCl and their isotopologues, many in excited vibrational levels.
 % \citep{Girart2017a}.  Beyond these two sources, only disordered structures or
 % disk-envelope blends have been observed.
 
+While the disk around Source I has been seen in several lines and confirmed
+to have a Keplerian rotation curve, such disks are rarely observed around massive
+stars.  Toward most accreting high-mass stars, the spectrum is dominated by
+the surrounding hot core \citep{Cesaroni2017a,Goddi2018a}.  By contrast, the
+disks around low-mass stars are often easily distinguished from their surroundings,
+either because they retain a disk after blowing away the parent core, or because
+the core is cooler and fewer lines are excited.  The identification of lines that
+trace disks around high-mass stars is therefore an important goal.
 
 
 
 Molecules consisting of alkali metals and halogens have only rarely been
-detected in space (McGuire 2018, ApJS, in press).
-%\citep[e.g., see the review
-%by][]{XXX} \bam{This reference should be `McGuire 2018 ApJs in press' for now.}.
+detected in space \citep{McGuire2018c}.
 Because of their rarity, their use as a diagnostic
 tool to measure metallicity and local physical conditions has been limited.
 %\rlp{I would consider adding a sentence about how we will use these lines
@@ -73,12 +79,14 @@ instrumentation, so they have great potential to probe either local gas properti
 or the radiation field when they are detected.
 
 
-KCl and NaCl have so far been observed toward evolved stars including the carbon star IRC
-+10216 \citep{Cernicharo1987a}, oxygen-rich evolved stars IK Tauri and VY Canis
+KCl and NaCl have so far been observed toward evolved stars including the
+carbon star IRC +10216 \citep{Cernicharo1987a}, oxygen-rich evolved stars IK
+Tauri and VY Canis
 Majoris \citep{Milam2007a}, the post-AGB star envelope CRL 2688
 \citep{Highberger2003a}, and the AGB star wind around OH 231+4.2
 \citep{Sanchez-Contreras2018a}.  In these sources, they exist only in a limited
-range of radii from the central star.  The limited environments in which these
+range of radii from the central star as they are blown away
+in slow winds \citep{Herwig2005a}.  The limited environments in which these
 molecules have been detected suggests that they only persist in the gas phase
 for a brief period when being ejected from dying stars before being
 incorporated into dust grains.
@@ -231,7 +239,7 @@ vibrational states.  Although transitions in higher vibrational states were
 measured, and some reported, in \citet{Caris2004a}, these did not provide the
 complete catalogs needed for this analysis, nor to our knowledge are these
 catalogues available in any of the standard online databases \citep[i.e., CDMS,
-SLAIM, JPL;][]{Muller2005a,Lovas2005a,Pickett1998a}.  We obtained the KCl
+SLAIM, JPL;][]{Muller2005a,Lovas2005b,Pickett1998a}.  We obtained the KCl
 frequencies for these lines from the catalogs of \citet{Barton2014a}, which was
 designed primarily for use in exoplanet atmospheres and includes over 10$^5$
 transitions for each molecular species and isotopologue with levels up to
@@ -305,7 +313,7 @@ Tables \ref{tab:all_detections_B3}-\ref{tab:all_detections_B7}.
 NaCl and KCl have only been seen in a small handful of other sources, all of
 which were moderately high-mass evolved stars blowing off their envelopes.  The
 known detections include the carbon star envelope IRC +10216
-\citep{Cernicharo1987a,Agundez2012a}, the post-AGB star envelope CRL 2688
+\citep{Cernicharo1987a,Agundez2012a,Zack2011a}, the post-AGB star envelope CRL 2688
 \citep{Highberger2003a}, and the oxygen-rich evolved star envelopes of VY Canis
 Majoris and IK Tauri \citep{Milam2007a,Kaminski2013a}. To our knowledge,
 \sourcei is only the
@@ -954,12 +962,18 @@ of \sourcei's disk hints that other refractory molecules may be present,
 which could enable their first detection in the ISM (e.g., such rare species as
 FeO and FeS), and may enable direct measurments of the metallicity in
 star-forming gas.
-It remains unclear whether \sourcei is a unique source or is representative
-of the class of high-mass protostars with disks; if the latter, these lines
-and potentially many others can be used to probe the radiation environment of 
-extremely embedded high-mass protostars.  An obvious next step is to search
-for these lines in other resolved disks around high-mass protostars \citep[e.g.
-HH80/81][]{Girart2017a}.
+
+The observed NaCl and KCl transitions uniquely trace the disk, unlike most other
+molecules observed in the ISM that are bright and abundant in hot cores like
+Sgr B2 \citep{Nummelin1998a,Belloche2013a}.  These lines therefore potentially
+represent tracers that can uniquely trace high-mass disks, making them extremely
+valuable probes of early-stage high-mass star formation.
+However, it remains unclear whether \sourcei is a unique source or is
+representative of the class of high-mass protostars with disks; if the latter,
+these lines and potentially many others can be used to probe the radiation
+environment of extremely embedded high-mass protostars.  An obvious next step
+is to search for these lines in other resolved disks around high-mass
+protostars \citep[e.g.  HH80/81;][]{Girart2017a}.
 
 The detection of these species with substantial population in vibrationally
 excited states highlights the need for laboratory work to measure such
