--- a/science.tex
+++ b/science.tex
@@ -69,6 +69,8 @@
 \newcommand{\apj}{ApJ}
 \newcommand{\aap}{A\&A}
 \newcommand{\apjl}{ApJL}
+\newcommand{\apjs}{ApJS}
+\newcommand{\araa}{ARAA}
 \newcommand{\jqsrt}{JQSRT}
 \newcommand{\mnras}{MNRAS}
 
@@ -102,16 +104,6 @@ Melvyn Wright\\
 \maketitle
 
 \begin{sciabstract}
-    abstract
-\end{sciabstract}
-
-% This file is a draft document for a Science/Nature-style submission.  If we % submit to one of these journals and are turned down, this can be a summary we % pass off to NRAO for a press release.
-
-% BAM: I removed the hard line wraps because they make my eyes twitch to look at % while working on this.  Feel free to put them back in =). % AG: You don't do all of your work in VIM?  Huh, weird.
-% BAM: Uh... nope.  I don't hate myself =).
-
- %Disks around high-mass stars have been difficult to identify and observe, in part because most molecular emission lines do not uniquely trace the disk. Observing disks around more massive stars is the critical test of whether star formation theories developed on low-mass stars apply at higher masses.  % \bam{I think these first two sentences need to contrast more to the low-mass % star/disk case.  The general audience is not going to know that the nice % protoplanetary disk images they see all over the place from ALMA are around % low-mass stars.  I leave a suggestion below.} % :+1: from me 
- 
  In the last decade, our knowledge of how planetary systems form around
  low-mass stars like our own has dramatically expanded thanks to new telescope
  facilities that enable the observation of molecular emission lines from young,
@@ -122,7 +114,7 @@ Melvyn Wright\\
  emission lines do not uniquely trace the disks in these regions. Here, we show
  that two molecular species, NaCl and KCl, appear to uniquely trace the outer
  edges of the disk around the massive (15~\msun) protostellar system Orion
- Source I, and are not seen in the disks's natal cloud.  Indeed, the chemical
+ Source I and are not seen in the disks's natal cloud.  Indeed, the chemical
  and physical environments of the disk around \sourcei appear to be so
  favorable for NaCl and KCl emission that we observe an unprecedented level of
  vibrational excitation in their populations.  Because the observed emission is
@@ -130,6 +122,18 @@ Melvyn Wright\\
  produce a detectable population highly particular, we suggest that these salts
  provide the best hope for unambiguous measurements of disk properties in the
  high-mass regime. 
+\end{sciabstract}
+
+% This file is a draft document for a Science/Nature-style submission.  If we % submit to one of these journals and are turned down, this can be a summary we % pass off to NRAO for a press release.
+
+% BAM: I removed the hard line wraps because they make my eyes twitch to look
+% at while working on this.  Feel free to put them back in =).
+% % AG: You % don't do all of your work in VIM?  Huh, weird.
+% BAM: Uh... nope.  I don't hate myself =).
+%
+
+ %Disks around high-mass stars have been difficult to identify and observe, in part because most molecular emission lines do not uniquely trace the disk. Observing disks around more massive stars is the critical test of whether star formation theories developed on low-mass stars apply at higher masses.  % \bam{I think these first two sentences need to contrast more to the low-mass % star/disk case.  The general audience is not going to know that the nice % protoplanetary disk images they see all over the place from ALMA are around % low-mass stars.  I leave a suggestion below.} % :+1: from me 
+ 
  % \bam{Distinct is the wrong word there. % I'm trying to convey that the
  % conditions are super 'choosey' or 'highl % selective' but that aren't right,
  % either.} % I went with "particular": it means both "selective" (in the sense
@@ -171,7 +175,7 @@ While dozens of species have been detected in the disks around low-mass stars
 \cite{McGuire2018c}, these molecules are comprised solely of a small selection
 of elements: H, C, N, O, and S.  All of the molecules seen in disks are also
 prevalent in the ISM, particularly in the hot cores surrounding high-mass stars
-\cite{some sgr b2 reference}. In high-mass environments, this therefore limits
+\cite{Nummelin1998a,Belloche2013a}. In high-mass environments, this therefore limits
 their utility as unique disk tracers in high-mass regions, hiding the kinematic
 signatures of rotation.
 
@@ -200,7 +204,7 @@ Orion nebula at millimeter wavelengths and is deeply embedded within a hot core
 photospheric temperature $\approx4000$ K \cite{Testi2010a} surrounded by a
 $\sim0.1$ \msun disk, which we observe nearly edge-on \cite{Plambeck2016a}. The
 central source mass has been debated, with estimates ranging from 7-20 \msun
-\cite{Matthews2010a,other}, but the highest-resolution data imply a central
+\cite{Matthews2010a}, but the highest-resolution data imply a central
 source mass $M\approx15$ \msun from fitting a Keplerian orbital model to \water
 and line (now identified as NaCl) emission profiles \cite{Ginsburg2018b}.
 
@@ -247,7 +251,7 @@ have previously been observed \cite{Goddi2013a,Hirota2014a}, there were dozens
 of lines that remained unidentified in our initial study \cite{Ginsburg2018b}.
 We have now identified these lines as transitions of NaCl and KCl, noting the
 excellent correspondence between the observed and measured/catalogued
-frequencies \cite{Caris2002a,Caris2004a,Muller2005a,Lovas2005a,Pickett1998a}.
+frequencies \cite{Caris2002a,Caris2004a,Muller2005a,Lovas2005b,Pickett1998a}.
 We additionally searched databases of transitions of these same species with
 more quanta of vibrational excitation, and found additional matches
 \cite{Barton2014a,Cabezas2016a}, with confident detections up to as much as
@@ -271,7 +275,7 @@ that, unlike SiO and \water, the salts do not trace the outflow.
 %no "we were shocked to see shocks"?  Boo.
 
 Once in the gas phase, however, we expect salts to rapidly deplete back into
-dust grains \cite{Cherncheff2012a}.  Since we observe them in emission, with
+dust grains \cite{Cherchneff2012a}.  Since we observe them in emission, with
 narrow velocity line profiles, they must be released into the gas phase by
 either grain destruction, or produced chemically from simple gas-phase
 precursors, likely elemental atomic gas (either neutral or ionized Na and K).
